--- a/client/styles/login_signup.css
+++ b/client/styles/login_signup.css
@@ -2,19 +2,6 @@ body {
     text-align: center;
 }
 
-img {
-    width: 600px;
-    height: 600px;
-}
-
-.user_details {
-    margin-left: 30%;
-    margin-top: 2rem;
-    padding-top: 2rem;
-    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;   
-    width: 700px;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -65,4 +52,25 @@ li:hover {
 a,a:visited {
     text-decoration: none;
     color: #0087F7;
+}
+
+
+#login {
+    margin-left: 30%;
+    margin-top: 2rem;
+    padding-top: 2rem;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;   
+    width: 700px;
+    padding-bottom: 4rem;
+}
+
+#signup {
+    margin-left: 30%;
+    margin-top: 2rem;
+    padding-top: 2rem;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;   
+    width: 700px;
+    padding-bottom: 4rem;   
+    padding-right: 3rem;
+    padding-left: 3rem;
 }
